[package]
name = "nohashmap"
version = "0.1.0"
edition = "2021"
description = "Use HashMap syntax in Rust for non-hashable types"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/nohashmap"
repository = "https://github.com/debruijn/nohashmap"
authors = ["Bert de Bruijn"]
keywords = ["hashmap", "map", "floats", "hash"]

[dependencies]
itertools = "0.14.0"

[profile.dev]
opt-level = 3
